Fixed image layout bug again

--- a/client/style/Card.scss
+++ b/client/style/Card.scss
@@ -147,7 +147,6 @@
 
             &[alt*="framed"], &[alt*="circular"], &[alt*="circular-small"] {
                 width: 100%;
-                transform: translateX(0);
                 box-shadow: $shadow2;
                 transition: box-shadow $durMedium $easing;
 
